Expanded functionality and endponts for main.py
Now with task prioritization and short - medium - long time frame categorization
